@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v0.10.2, December 2012
+v0.10.3-dev, December 2012
 
 NAME
 ----
