@@ -1,3 +1,9 @@
+mcabber (0.10.3-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (0.10.2)
 
  * Update receipts handling according to recent XEP updates (Myhailo Danylenko)
